--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Daddy's Excel Manager</title>
+    <title>Daddy's Excel Generator</title>
     <link rel="stylesheet" href="assets/stylecsv.css" />
 </head>
 <body>
