--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>CSV/TXT & EOD to Excel Generator</h1>
 
     <div class="controls">
-        <label for="mainCsvInput">Upload CSV to TXT converted files</label>
+        <label for="mainCsvInput">Upload CSV to TXT converted files from Bazel's app</label>
         <input type="file" id="mainCsvInput" accept=".csv,.txt" multiple />
     </div>
 
