--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      AYALA CHECKER LINK
 ========================= -->
 <a href="https://ayala-checker.vercel.app/ayala.html" target="_blank" id="ayalaChecker">
-    Ayala CSV Reader/Converter
+    Ayala CSV Reader/Converter by Bazel
     <span class="tooltip">Link to the CSV → TXT converter by Boss BAZEL</span>
 </a>
 
