--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      MAIN CONTAINER
 ========================= -->
 <div class="container">
-    <h1>CSV/TXT & EOD to Excel Generator</h1>
+    <h1>CSV/TXT & EOD to Excel</h1>
 
     <div class="controls">
         <label for="mainCsvInput">Upload CSV to TXT converted files from Bazel's app</label>
